# PolipoX

./: .gitignore  README.md  client.py  estados.txt  fc.txt  main.py  pyproject.toml  requirements.txt  states.py  test_ui.py  tranlate.py  ui.py  uib.py  utils.py
