[tool.poetry]
name = "registro-polipos"
version = "0.1.0"
description = ""
authors = ["Equipo Amarillo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper = "^1.0.1"
vosk = "^0.3.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
