[tool.poetry]
name = "registro-polipos"
version = "0.1.0"
description = ""
authors = ["Equipo Amarillo"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "3.9.2"
faster-whisper = "^1.0.1"
vosk = "^0.3.45"
pyaudio = "^0.2.14"
pyttsx3 = "^2.90"
wave = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
